Limit HTML files to 120 character width

--- a/_experiences/01_rim.html
+++ b/_experiences/01_rim.html
@@ -12,5 +12,6 @@ technologies:
  - Perforce
 ---
 <p>
-    Provided software support for several developer tools. This involved managing user permissions, answering questions, and performing administrative tasks. Created two web applications for the support team during spare time.
+    Provided software support for several developer tools. This involved managing user permissions, answering questions,
+    and performing administrative tasks. Created two web applications for the support team during spare time.
 </p>
