--- a/_experiences/03_tangramcare.html
+++ b/_experiences/03_tangramcare.html
@@ -11,5 +11,6 @@ technologies:
  - MongoDB
 ---
 <p>
-    Worked with a small start-up team  to design and develop a new home-healthcare application. Contributed to the development of the Android mobile application, web server and database.
+    Worked with a small start-up team  to design and develop a new home-healthcare application. Contributed to the
+    development of the Android mobile application, web server and database.
 </p>
