--- a/_experiences/04_phoenix_interactive.html
+++ b/_experiences/04_phoenix_interactive.html
@@ -11,5 +11,7 @@ technologies:
  - Microsoft Compiled HTML Help
 ---
 <p>
-    Oversaw the design and development of a new proof-of-concept developer portal. Worked on the project from start to finish. This included the creation of potential use-cases for the site, low-level design, implementation, documentation, and a final presentation of the completed work to company executives.
+    Oversaw the design and development of a new proof-of-concept developer portal. Worked on the project from start to
+    finish. This included the creation of potential use-cases for the site, low-level design, implementation,
+    documentation, and a final presentation of the completed work to company executives.
 </p>
