--- a/_experiences/06_innovaction.html
+++ b/_experiences/06_innovaction.html
@@ -16,5 +16,7 @@ projects:
  - countify
 ---
 <p>
-    This was a part time position working with a small startup company that was based based out of an incubator on the campus of Middle East Technical University. They had several products/projects in flight and this job involved creating websites for these products.
+    This was a part time position working with a small startup company that was based based out of an incubator on the
+    campus of Middle East Technical University. They had several products/projects in flight and this job involved
+    creating websites for these products.
 </p>
