--- a/_experiences/09_university_of_waterloo.html
+++ b/_experiences/09_university_of_waterloo.html
@@ -6,8 +6,12 @@ dates: Sept 2009 - April 2015
 category: school
 ---
 <p>
-    Five-year program developing a solid understanding of the fundamentals of computer science and its applications. This is a co-operative education program involving six work terms as part of the degree, providing a total of two years of valuable work experience.
+    Five-year program developing a solid understanding of the fundamentals of computer science and its applications.
+    This is a co-operative education program involving six work terms as part of the degree, providing a total of two
+    years of valuable work experience.
 </p>
 <p>
-    <strong>Relevant Courses</strong>: Distributed Systems, Concurrent and Parallel Programming, Computer Architecture, Database Management, Algorithms, Data Structures and Data Management, Operating Systems, Object-Oriented Software Development
+    <strong>Relevant Courses</strong>: Distributed Systems, Concurrent and Parallel Programming, Computer Architecture,
+    Database Management, Algorithms, Data Structures and Data Management, Operating Systems, Object-Oriented Software
+    Development
 </p>
