--- a/_projects/valueconnect.html
+++ b/_projects/valueconnect.html
@@ -22,43 +22,46 @@ technologies:
  - Jenkins
 ---
 <p>
-    <a href='https://www.valueconnect.ca/'>Value Connect</a> is a property appraisal management company, harnessing technology
-    to facilitate speedy turnaround times and build advanced, consistent reports.
+    <a href='https://www.valueconnect.ca/'>Value Connect</a> is a property appraisal management company, harnessing
+    technology to facilitate speedy turnaround times and build advanced, consistent reports.
 </p>
 <p>
-    The project was generated and scaffolded using the <a href='https://jhipster.github.io/'>JHipster</a> Yeoman generator.
-    The technology stack includes a back-end JSON API created with Java and Spring, and a front-end single page website written in AngularJS.
+    The project was generated and scaffolded using the <a href='https://jhipster.github.io/'>JHipster</a> Yeoman
+    generator. The technology stack includes a back-end JSON API created with Java and Spring, and a front-end single
+    page website written in AngularJS.
 </p>
 <p>
     Listed below are some notable features of the software and interesting development points:
 </p>
 <ul>
     <li>
-        Reports are built with a custom form-builder solution that supports partial completion. A custom
-        server-side validation solution is also used and integrates with
-        <a href='https://material.angularjs.org/latest/demo/input'>Angular Material</a> to dynamically display validation
-        errors in the front-end. All submissions are versioned and each version can be viewed or reverted to at any time.
+        Reports are built with a custom form-builder solution that supports partial completion. A custom server-side
+        validation solution is also used and integrates with
+        <a href='https://material.angularjs.org/latest/demo/input'>Angular Material</a>
+        to dynamically display validation errors in the front-end. All submissions are versioned and each version can be
+        viewed or reverted to at any time.
     </li>
     <li>
         The workflow for each report is managed by a pre-defined state machine, implemented using
         <a href='http://projects.spring.io/spring-statemachine/' target='blank'>Spring Statemachine</a>.
     </li>
     <li>
-        Access to software is divided among many different security roles and managed by Spring Security. The site has passed a rigorous
-        3rd party security audit provided by <a href='https://www.coalfire.com/' target='blank'>Coalfire</a>.
+        Access to software is divided among many different security roles and managed by Spring Security. The site has
+        passed a rigorous 3rd party security audit provided by
+        <a href='https://www.coalfire.com/' target='blank'>Coalfire</a>.
     </li>
     <li>
-        Google Maps <a href='https://developers.google.com/maps/documentation/geocoding/intro' target='blank'>Geocoding API</a> is used to
-        automatically locate and verify user submitted addresses. It is also used to auto-populate city, province and postal code fields on
-        user forms.
+        Google Maps <a href='https://developers.google.com/maps/documentation/geocoding/intro' target='blank'>Geocoding API</a>
+        is used to automatically locate and verify user submitted addresses. It is also used to auto-populate city,
+        province and postal code fields on user forms.
     </li>
     <li>
-        Google Maps <a href='https://developers.google.com/maps/documentation/distance-matrix/' target='blank'>Distance Matrix API</a> is
-        used to automatically calculate distances between locations.
+        Google Maps <a href='https://developers.google.com/maps/documentation/distance-matrix/' target='blank'>Distance Matrix API</a>
+        is used to automatically calculate distances between locations.
     </li>
     <li>
-        Google Maps <a href='https://developers.google.com/maps/documentation/static-maps/' target='blank'>Static Maps API</a> is used to
-        automatically generate maps that are used in the final report.
+        Google Maps <a href='https://developers.google.com/maps/documentation/static-maps/' target='blank'>Static Maps API</a>
+        is used to automatically generate maps that are used in the final report.
     </li>
     <li>
         Multiple languages are supported using <a href='https://angular-translate.github.io/'>Angular Translate</a>.
