--- a/_experiences/05_metu.html
+++ b/_experiences/05_metu.html
@@ -5,7 +5,13 @@ location: Ankara, Turkey
 dates: Sept 2013 - May 2014
 category: school
 ---
-<p>The international exchange program allows a student to spend a number of semesters obtaining credits for their home institution in another country. METU is widely considered to be the top university in Turkey, but the experience is not only educational. There is much to learn culturally in Turkey and often while travelling to new countries you also learn more about yourself.</p>
 <p>
-    <strong>Relevant Courses</strong>: Introduction to Artificial Intelligence, Computer Networks, Information Systems Management
+    The international exchange program allows a student to spend a number of semesters obtaining credits for their home
+    institution in another country. METU is widely considered to be the top university in Turkey, but the experience is
+    not only educational. There is much to learn culturally in Turkey and often while travelling to new countries you
+    also learn more about yourself.
+</p>
+<p>
+    <strong>Relevant Courses</strong>: Introduction to Artificial Intelligence, Computer Networks, Information Systems
+    Management
 </p>
