--- a/_experiences/10_sandbox_software.html
+++ b/_experiences/10_sandbox_software.html
@@ -27,8 +27,12 @@ technologies:
  - Drupal
 ---
 <p>
-    <a href='https://www.sandboxsoftware.ca/'>Sandbox Software Solutions</a> provides development services for custom software solutions, web portals/intranets, content managed website development, and mobile app development.
+    <a href='https://www.sandboxsoftware.ca/'>Sandbox Software Solutions</a> provides development services for custom
+    software solutions, web portals/intranets, content managed website development, and mobile app development.
 </p>
 <p>
-    Many sites are created in Sandbox's proprietary <a href='http://www.oasiscms.com/'>Oasis Content Management System</a>, which is developed using Java, Hybernate and Velocity Templating. Other websites and projects have been developed using C# (ASP, WPF), PHP (Laravel) WordPress or Drupal, depending on client requirements.
+    Many sites are created in Sandbox's proprietary
+    <a href='http://www.oasiscms.com/'>Oasis Content Management System</a>, which is developed using Java, Hybernate and
+    Velocity Templating. Other websites and projects have been developed using C# (ASP, WPF), PHP (Laravel) WordPress or
+    Drupal, depending on client requirements.
 </p>
