Normalize use of lists in experience content

--- a/_experiences/12_dbno.html
+++ b/_experiences/12_dbno.html
@@ -29,9 +29,19 @@ technologies:
     launch, the site was demoed with several test groups with visual and auditory impairments and was received well.
 </p>
 <p>
-    As a development lead on this project, responsibilities included: software development and testing; top-level
-    architectural design; managing a Jira project to track work (creating and updating cases, organizing the backlog,
-    planning sprints, etc.); dev-ops work to deploy and maintain multiple production and testing environments;
-    development of documentation for future developers; and client interaction to develop additional requirements for
-    the product.
+    As a development lead on this project, responsibilities included:
 </p>
+<ul>
+    <li>Design and documentation of the overall software architecture.</li>
+    <li>Software development and testing.</li>
+    <li>
+        Managing a Jira project to track work (creating and updating cases, organizing the backlog, planning sprints,
+        etc).
+    </li>
+    <li>
+        Dev-ops work to maintain multiple production and testing environments using CI/CD automation to integrate source
+        control, code review, testing and deployments.
+    </li>
+    <li>Development of source code documentation for future developers.</li>    
+    <li>Client interaction to develop additional requirements for the product.</li>
+</ul>
