--- a/_experiences/11_value_connect.html
+++ b/_experiences/11_value_connect.html
@@ -29,8 +29,19 @@ technologies:
     technology to facilitate speedy turnaround times and build advanced, consistent reports.
 </p>
 <p>
-    As team lead on this project, responsibilities included: software development and testing; top-level architectural
-    design; managing a JIRA project to track work (creating and updating cases, organizing the backlog, planning sprints,
-    etc.); dev-ops work to deploy and maintain multiple production and testing environments; development of
-    documentation for future developers; and client interaction to develop additional requirements for the product.
+    As team lead on this project, responsibilities included
 </p>
+<ul>
+    <li>Design and documentation of the overall software architecture.</li>
+    <li>Software development and testing.</li>
+    <li>
+        Managing a JIRA project to track work (creating and updating cases, organizing the backlog, planning sprints,
+        etc).
+    </li>
+    <li>
+        Dev-ops work to maintain multiple production and testing environments using CI/CD automation to integrate source
+        control, code review, testing and deployments.
+    </li>
+    <li>Development of documentation for future developers.</li>
+    <li>Client interaction to develop additional requirements for the product.</li>
+</ul>
