--- a/_experiences/13_tarion.html
+++ b/_experiences/13_tarion.html
@@ -46,11 +46,11 @@ technologies:
     As the lead developer on this project, responsibilities included:
 </p>
 <ul>
-    <li>Top-level architectural design</li>
-    <li>Software development and testing</li>
-    <li>Coordination and code review of work from other project developers</li>
-    <li>Dev-ops work to deploy to and maintain multiple production and testing environments</li>
-    <li>Development of automated unit tests, integrated with the CI build process</li>
-    <li>Managing a JIRA project to track work (keeping tickets up to date)</li>
-    <li>Development of project documentation</li>
+    <li>Design and documentation of the overall software architecture.</li>
+    <li>Software development and testing.</li>
+    <li>Coordination and code review of work from other project developers.</li>
+    <li>Dev-ops work to deploy to and maintain multiple production and testing environments.</li>
+    <li>Development of automated unit tests, integrated with the CI build process.</li>
+    <li>Managing a JIRA project to track work (keeping tickets up to date).</li>
+    <li>Development of project documentation.</li>
 </ul>
