--- a/_experiences/05_metu.html
+++ b/_experiences/05_metu.html
@@ -1,5 +1,5 @@
 ---
-title: International Exchange)
+title: International Exchange
 company: Middle East Technical University
 location: Ankara, Turkey
 dates: Sept 2013 - May 2014
