Remove 'engineer' from title

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
         <div class="intro-text">
           <h1 class="name">Mark Monteiro</h1>
           <hr class="hidden-xs hr-light">
-          <span class="skills">Software Engineer - Web Developer</span>
+          <span class="skills">Software/Web Developer</span>
           <ul class="social">
             <li>
               <a href="{{page.email_href}}">
