Update scroll navigation to work with forward/back navigation

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
 </header>
 
 <!-- About Section -->
-<section id="about">
+<section data-section-id="#about">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -99,7 +99,7 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
 </section>
 
 <!-- Resume Section -->
-<section id="resume" class="success">
+<section data-section-id="#resume" class="success">
   <div class="cd-container">
     <div class="cd-timeline-label">
       <h2 class="label label-primary">Experience</h2>
@@ -109,7 +109,7 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
 </section> <!-- cd-timeline -->
 
 <!-- Portfolio Grid Section -->
-<section id="portfolio">
+<section data-section-id="#portfolio">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -128,7 +128,7 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
 
 <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
 <div class="scroll-top page-scroll visible-xs visible-sm">
-  <a class="btn btn-primary" href="{{site.url}}">
+  <a class="btn btn-primary" href="{{site.url}}#page-top">
     <span class="fa fa-chevron-up"></span>
     <span class='sr-only'>Scroll To Top Of Page</span>
   </a>
