--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
 </header>
 
 <!-- About Section -->
-<section data-section-id="#about">
+<section data-nav-id="#about">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -99,7 +99,7 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
 </section>
 
 <!-- Resume Section -->
-<section data-section-id="#resume" class="success">
+<section data-nav-id="#resume" class="success">
   <div class="cd-container">
     <div class="cd-timeline-label">
       <h2 class="label label-primary">Experience</h2>
@@ -109,7 +109,7 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
 </section> <!-- cd-timeline -->
 
 <!-- Portfolio Grid Section -->
-<section data-section-id="#portfolio">
+<section data-nav-id="#portfolio">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
