--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
 
 <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
 <div class="scroll-top page-scroll visible-xs visible-sm">
-  <a class="btn btn-primary" href="{{ '#page-top' | absolute_url }}">
+  <a class="btn btn-primary" href="/#home">
     <span class="fa fa-chevron-up"></span>
     <span class='sr-only'>Scroll To Top Of Page</span>
   </a>
