Revert to using [id] attribute for navigation
- Move .page-scroll class directly onto link elements
- Remove '#page-top' and default scroll target to 'body' instead

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
 </header>
 
 <!-- About Section -->
-<section data-nav-id="#about">
+<section id="about">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -99,7 +99,7 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
 </section>
 
 <!-- Resume Section -->
-<section data-nav-id="#resume" class="success">
+<section id="resume" class="success">
   <div class="cd-container">
     <div class="cd-timeline-label">
       <h2 class="label label-primary">Experience</h2>
@@ -109,7 +109,7 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
 </section> <!-- cd-timeline -->
 
 <!-- Portfolio Grid Section -->
-<section data-nav-id="#portfolio">
+<section id="portfolio">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -127,8 +127,8 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
 {% include portfolio-modals.html %}
 
 <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-<div class="scroll-top page-scroll visible-xs visible-sm">
-  <a class="btn btn-primary" href="/#home">
+<div class="scroll-top visible-xs visible-sm">
+  <a class="btn btn-primary page-scroll" href="/#home">
     <span class="fa fa-chevron-up"></span>
     <span class='sr-only'>Scroll To Top Of Page</span>
   </a>
