Add additional websites to Sandbox Software experience

--- a/_experiences/10_sandbox_software.html
+++ b/_experiences/10_sandbox_software.html
@@ -5,16 +5,24 @@ location: Guelph, Ontario
 dates: Sept 2015 - Aug 2016
 category: work
 external_projects:
-    - name: Toronto Community Housing 2015 Annual Report
-      url: tch.dev.oasiscms.com
+    - name: The Westland Corporation
+      url: https://www.thewestlandcorp.com/
     - name: Sandbox Software Solutions
       url: sandboxsoftware.ca
+    - name: Toronto Community Housing 2015 Annual Report
+      url: tch.dev.oasiscms.com
     - name: Women &amp; HIV/AIDS Initiative (WHAI)
       url: www.whai.ca
     - name: CanVECTOR
       url: canvector.ca
     - name: EBS Geostructural
       url: ebsgeo.com
+    - name: Kitchener Public Library
+      url: kpl.org
+    - name: Waterloo Public Library
+      url: www.wpl.ca
+    - name: South Bruce Grey Health Centre
+      url: https://www.sandboxsoftware.ca/our-work/portfolio-detail/%7E729-south-bruce-grey-health-centre
 technologies:
  - ASP.net MVC
  - ASP.net Web Pages
