--- a/_experiences/10_sandbox_software.html
+++ b/_experiences/10_sandbox_software.html
@@ -8,19 +8,19 @@ external_projects:
     - name: The Westland Corporation
       url: https://www.thewestlandcorp.com/
     - name: Sandbox Software Solutions
-      url: sandboxsoftware.ca
+      url: https://sandboxsoftware.ca
+      - name: Women &amp; HIV/AIDS Initiative (WHAI)
+      url: http://www.whai.ca
+      - name: CanVECTOR
+      url: https://canvector.ca
+      - name: EBS Geostructural
+      url: https://ebsgeo.com
+      - name: Kitchener Public Library
+      url: https://kpl.org
+      - name: Waterloo Public Library
+      url: https://www.wpl.ca
     - name: Toronto Community Housing 2015 Annual Report
-      url: tch.dev.oasiscms.com
-    - name: Women &amp; HIV/AIDS Initiative (WHAI)
-      url: www.whai.ca
-    - name: CanVECTOR
-      url: canvector.ca
-    - name: EBS Geostructural
-      url: ebsgeo.com
-    - name: Kitchener Public Library
-      url: kpl.org
-    - name: Waterloo Public Library
-      url: www.wpl.ca
+      url: https://www.sandboxsoftware.ca/our-work/portfolio-detail/%7E856-toronto-community-housing---annual-report-microsite
     - name: South Bruce Grey Health Centre
       url: https://www.sandboxsoftware.ca/our-work/portfolio-detail/%7E729-south-bruce-grey-health-centre
 technologies:
