--- a/_experiences/10_sandbox_software.html
+++ b/_experiences/10_sandbox_software.html
@@ -5,24 +5,24 @@ location: Guelph, Ontario
 dates: Sept 2015 - Aug 2016
 category: work
 external_projects:
-    - name: The Westland Corporation
-      url: https://www.thewestlandcorp.com/
-    - name: Sandbox Software Solutions
-      url: https://sandboxsoftware.ca
-      - name: Women &amp; HIV/AIDS Initiative (WHAI)
-      url: http://www.whai.ca
-      - name: CanVECTOR
-      url: https://canvector.ca
-      - name: EBS Geostructural
-      url: https://ebsgeo.com
-      - name: Kitchener Public Library
-      url: https://kpl.org
-      - name: Waterloo Public Library
-      url: https://www.wpl.ca
-    - name: Toronto Community Housing 2015 Annual Report
-      url: https://www.sandboxsoftware.ca/our-work/portfolio-detail/%7E856-toronto-community-housing---annual-report-microsite
-    - name: South Bruce Grey Health Centre
-      url: https://www.sandboxsoftware.ca/our-work/portfolio-detail/%7E729-south-bruce-grey-health-centre
+  - name: The Westland Corporation
+    url: https://www.thewestlandcorp.com
+  - name: Sandbox Software Solutions
+    url: https://sandboxsoftware.ca
+  - name: Women &amp; HIV/AIDS Initiative (WHAI)
+    url: http://www.whai.ca
+  - name: CanVECTOR
+    url: https://canvector.ca
+  - name: EBS Geostructural
+    url: https://ebsgeo.com
+  - name: Kitchener Public Library
+    url: https://kpl.org
+  - name: Waterloo Public Library
+    url: https://www.wpl.ca
+  - name: Toronto Community Housing 2015 Annual Report
+    url: https://www.sandboxsoftware.ca/our-work/portfolio-detail/~856-toronto-community-housing---annual-report-microsite
+  - name: South Bruce Grey Health Centre
+    url: https://www.sandboxsoftware.ca/our-work/portfolio-detail/~729-south-bruce-grey-health-centre
 technologies:
  - ASP.net MVC
  - ASP.net Web Pages
