Update projects links for Sandbox Software

--- a/_experiences/10_sandbox_software.html
+++ b/_experiences/10_sandbox_software.html
@@ -6,23 +6,23 @@ dates: Sept 2015 - Aug 2016
 category: work
 external_projects:
   - name: The Westland Corporation
-    url: https://www.thewestlandcorp.com
-  - name: Sandbox Software Solutions
-    url: https://sandboxsoftware.ca
+    url: https://www.thewestlandcorp.com/
   - name: Women &amp; HIV/AIDS Initiative (WHAI)
-    url: http://www.whai.ca
+    url: https://whai.ca/
   - name: CanVECTOR
-    url: https://canvector.ca
+    url: https://canvector.ca/
   - name: EBS Geostructural
-    url: https://ebsgeo.com
+    url: https://ebsgeo.com/
+  - name: Natural Chemistry BluePrint
+    url: https://sandboxsoftware.ca/projects/blueprint/
   - name: Kitchener Public Library
-    url: https://kpl.org
+    url: https://kpl.org/
   - name: Waterloo Public Library
-    url: https://www.wpl.ca
-  - name: Toronto Community Housing 2015 Annual Report
-    url: https://www.sandboxsoftware.ca/our-work/portfolio-detail/~856-toronto-community-housing---annual-report-microsite
+    url: https://www.wpl.ca/
+  - name: Ontario Clean Water Agency
+    url: http://ocwa.ca/
   - name: South Bruce Grey Health Centre
-    url: https://www.sandboxsoftware.ca/our-work/portfolio-detail/~729-south-bruce-grey-health-centre
+    url: https://www.sbghc.on.ca/
 technologies:
  - ASP.net MVC
  - ASP.net Web Pages
