Fix link to Bootrap theme overview page

--- a/_projects/markmonteiroinfo.html
+++ b/_projects/markmonteiroinfo.html
@@ -17,7 +17,7 @@ technologies:
 ---
 <p>
   This website is built with Jekyll, a static website generator. They layout and styling for the site were branched off
-  of a free base theme from <a href="http://startbootstrap.com/template-overviews/freelancer/">startbootstrap.com</a>
+  of a free base theme from <a href="https://startbootstrap.com/theme/freelancer">startbootstrap.com</a>
   and modified appropriately. A notable modification is the incorporation and modification of a vertical timeline
   from <a href="http://codyhouse.co/gem/vertical-timeline/">codyhouse.co</a>.
 </p>
