Fix link to KPL website

--- a/_experiences/10_sandbox_software.html
+++ b/_experiences/10_sandbox_software.html
@@ -16,7 +16,7 @@ external_projects:
   - name: Natural Chemistry BluePrint
     url: https://sandboxsoftware.ca/projects/blueprint/
   - name: Kitchener Public Library
-    url: https://kpl.org/
+    url: https://www.kpl.org/
   - name: Waterloo Public Library
     url: https://www.wpl.ca/
   - name: Ontario Clean Water Agency
