Update link for Spring Statemachine

--- a/_projects/valueconnect.html
+++ b/_projects/valueconnect.html
@@ -43,7 +43,7 @@ technologies:
     </li>
     <li>
         The workflow for each report is managed by a pre-defined state machine, implemented using
-        <a href='http://projects.spring.io/spring-statemachine/' target='blank'>Spring Statemachine</a>.
+        <a href='https://spring.io/projects/spring-statemachine/' target='blank'>Spring Statemachine</a>.
     </li>
     <li>
         Access to software is divided among many different security roles and managed by Spring Security. The site has
