Use HTTPS wherever possible

--- a/_experiences/10_sandbox_software.html
+++ b/_experiences/10_sandbox_software.html
@@ -20,7 +20,7 @@ external_projects:
   - name: Waterloo Public Library
     url: https://www.wpl.ca/
   - name: Ontario Clean Water Agency
-    url: http://ocwa.ca/
+    url: https://ocwa.ca/
   - name: South Bruce Grey Health Centre
     url: https://www.sbghc.on.ca/
 technologies:
@@ -30,7 +30,7 @@ technologies:
  - Laravel
  - Windows Presentation Foundation (WPF)
  - Windows Communication Foundation (WCF)
- - <a href='http://www.oasiscms.com/'>Oasis CMS</a>
+ - <a href='https://www.oasiscms.com/'>Oasis CMS</a>
  - WordPress
  - Drupal
 ---
@@ -40,7 +40,7 @@ technologies:
 </p>
 <p>
     Many sites are created in Sandbox's proprietary
-    <a href='http://www.oasiscms.com/'>Oasis Content Management System</a>, which is developed using Java, Hybernate and
+    <a href='https://www.oasiscms.com/'>Oasis Content Management System</a>, which is developed using Java, Hybernate and
     Velocity Templating. Other websites and projects have been developed using C# (ASP, WPF), PHP (Laravel) WordPress or
     Drupal, depending on client requirements.
 </p>
