--- a/_experiences/12_dbno.html
+++ b/_experiences/12_dbno.html
@@ -17,7 +17,7 @@ technologies:
  - BrowseAloud
 ---
 <p>
-    The <a href='http://www.deafblindnetworkontario.com'>DBNO</a> is group made up of individuals, organizations and
+    The <a href='https://www.deafblindnetworkontario.com/'>DBNO</a> is group made up of individuals, organizations and
     service providers who work together to provide services for Ontarians who are deafblind. Work for DBNO as a contract
     developer involved creating their new web portal for deafblind people and caretakers to apply for intervenor
     service funding from the government of Ontario.
