--- a/_projects/markmonteiroinfo.html
+++ b/_projects/markmonteiroinfo.html
@@ -1,7 +1,7 @@
 ---
 title: Mark Monteiro
 order: 4
-website: http://markmonteiro.info
+website: https://markmonteiro.info
 source: https://github.com/mark-monteiro/markmonteiro.info
 developed: April 2015
 technologies:
@@ -19,7 +19,7 @@ technologies:
   This website is built with Jekyll, a static website generator. They layout and styling for the site were branched off
   of a free base theme from <a href="https://startbootstrap.com/theme/freelancer">startbootstrap.com</a>
   and modified appropriately. A notable modification is the incorporation and modification of a vertical timeline
-  from <a href="http://codyhouse.co/gem/vertical-timeline/">codyhouse.co</a>.
+  from <a href="https://codyhouse.co/gem/vertical-timeline/">codyhouse.co</a>.
 </p>
 <p>
   The site is hosted using Netlify, which provides simple, free hosting for static websites using the Jekyll web
