--- a/_projects/smokesletsgo.html
+++ b/_projects/smokesletsgo.html
@@ -1,7 +1,7 @@
 ---
 title: Smokes, Let's Go
 order: 7
-website: http://smokesletsgo.com
+website: https://smokesletsgo.com
 source: https://github.com/mark-monteiro/SmokesLetsGo/
 developed: August 2014
 technologies:
