Point to Firefox addon site instead of Chome webstore for Drumpfinator project
The extension was removed from the Chrome web store for "hate speech" 🙄

--- a/_projects/drumpfinator.html
+++ b/_projects/drumpfinator.html
@@ -1,7 +1,7 @@
 ---
 title: Drumpfinator+
 order: 5
-website: https://chrome.google.com/webstore/detail/drumpfinator/bjimekmhhbmpblaifnbeingfpbipbppg
+website: https://addons.mozilla.org/en-US/firefox/addon/drumpfinator-plus/
 source: https://github.com/mark-monteiro/drumpfinator
 developed: August 2016
 technologies:
