Use WaybackMachine to access old OCWA site

--- a/_experiences/10_sandbox_software.html
+++ b/_experiences/10_sandbox_software.html
@@ -20,7 +20,7 @@ external_projects:
   - name: Waterloo Public Library
     url: https://www.wpl.ca/
   - name: Ontario Clean Water Agency
-    url: https://ocwa.ca/
+    url: https://web.archive.org/web/20221220144039/https://www.ocwa.ca/
   - name: South Bruce Grey Health Centre
     url: https://www.sbghc.on.ca/
 technologies:
